
1.0.6:
Bug fixes:
- Fix password sent in password forgot email
- Fixed GrapeClient issues with uploading files
- Fixed data import upload if spreadsheet has missing header (this caused the server to restart)
- Fixed race condition - queries are allowed through, even though grape.user_id is not set in the SQL
- Better error reporting on data import process

New features:
- Script to upload files to /grape/data_import/upload and optionally process it
- Modular grape-manage script that will replace manage.sh

1.0.7:
Bug fixes:
- Tables with 'all' SELECT permission did not pick up as allowed
- When a user's password is NULL, any password would work
- Fix the storage of user save data in grape.user_history

New features:
- HTTP Authentication is now supported
- Support for IP filters on users
- Caching of compiled public JS files (and new config option cache_public_js_dirs to enable it)

- New API call PGTableInformation
- New view grape.v_table_permissions
- New view grape.v_active_users
- New function grape.year_diff
- New function grape.table_permissions_add with overloads
- New setting: user_ip_filter

Removed features:
- Removed the support for reading session ID from cookies
- Removed deprecated functionality that will send index.html if an API file could not be matched
- Removed HSTORE extension from schema
- Removed System user

Other:
- Change data type of grape.user_history.data to JSONB - thereby removing the need for the HSTORE extension
- Bumped package versions

1.0.8
- New config setting process_name sets the visible process(es) name(s)
- Removed "publicPath" from app settings (in favour of "public_directories")
- Notification subsystem
- New tool to set up a database: grape-db-setup
- User save will not change the password if it is not provided
- HTTPS support for GrapeClient (also applies to grape-query)
- Removed lookup schema and tables from grape (this includes: lookup.relationship, lookup.bank_branch and lookup.valid_bank_name)
