@@ -1,6 +1,6 @@
 {
 	"name": "ps-grape",
-	"version": "1.0.7",
+	"version": "1.0.8",
 	"description": "Platinum Software Grape Framework",
 	"main": "app/index.js",
 	"directories": {
